--- a/src/components/OurStory/styles.module.css
+++ b/src/components/OurStory/styles.module.css
@@ -51,11 +51,112 @@
   font-size: 14px;
 }
 
+/* Popup start */
+body.activeModal {
+  overflow-y: hidden;
+}
+
+.btnModal {
+  padding: 10px 20px;
+  display: block;
+  padding: 100px auto 0;
+  font-size: 18px;
+}
+
+.modal,
+.overlay {
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  z-index: 999;
+}
+
+.overlay {
+  background: rgba(49, 49, 49, 0.8);
+}
+.modalContent {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px 25px;
+  /* max-width: 600px; */
+  /* min-width: 300px; */
+  width: 90%;
+  background-color: #fff;
+  border: 1px solid #999;
+  border-radius: 6px;
+  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
+  z-index: 999;
+  text-align: start;
+  overflow: auto;
+}
+
+.modalContent h3 {
+  font-size: 32px;
+  padding: 5px 0 20px;
+  color: #4a4a4a;
+  font-family:"OpenSans-Light";
+  font-weight: 300;
+}
+
+.modalContent h5 {
+  color: #777;
+  line-height: 1.8;
+  font-family:Arial;
+  font-weight: lighter;
+  font-size: 20px;
+  padding-top: 0px;
+}
+
+.modalContent p{
+  color: #777;
+  line-height: 1.8;
+  font-family:"OpenSans-Medium";
+  font-size: 16px;
+}
+
+.closeModal {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 5px 7px;
+}
+/* Popup End */
+
 @media screen and (max-width: 428px) {
   .ourStoryContainer {
     display: none;
   }
 
+  .modalContent {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    top: 50%;
+    left: 50%;
+    height: 90vh;
+    transform: translate(-50%, -50%);
+    padding: 20px 25px;
+    /* max-width: 600px; */
+    /* min-width: 300px; */
+    width: 90%;
+    background-color: #fff;
+    border: 1px solid #999;
+    border-radius: 6px;
+    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
+    z-index: 999;
+    text-align: start;
+    overflow: auto;
+  }
+
+  /* PopUps End */
 }
 
 @media screen and (min-width: 428px) and (max-width: 768px) {
