--- a/src/components/PopUp/styles.module.css
+++ b/src/components/PopUp/styles.module.css
@@ -1,46 +1,99 @@
 body.activeModal {
-    overflow-y: hidden;
+  overflow-y: hidden;
 }
 
 .btnModal {
-    padding: 10px 20px;
-    display: block;
-    margin: 100px auto 0;
-    font-size: 18px;
+  padding: 10px 20px;
+  display: block;
+  margin: 100px auto 0;
+  font-size: 18px;
 }
 
-.modal, .overlay {
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    position: fixed;
-    z-index: 999;
+.modal,
+.overlay {
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  z-index: 999;
 }
 
 .overlay {
-    background: rgba(49,49,49,0.8);
+  background: rgba(49, 49, 49, 0.8);
 }
 .modalContent {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 14px 28px;
-    max-width: 600px;
-    min-width: 300px;
-    background-color: #fff;
-    border: 1px solid #999;
-    border-radius: 6px;
-    box-shadow: 0 3px 9px rgba(0,0,0,.5);
-    z-index: 999;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px 25px;
+  /* max-width: 600px; */
+  /* min-width: 300px; */
+  width: 90%;
+  background-color: #fff;
+  border: 1px solid #999;
+  border-radius: 6px;
+  box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+.modalContent h5 {
+  text-align: start;
+  font-family: "OpenSans-Medium";
+  font-size: 32px;
+  font-weight: 300;
+  padding-bottom: 10px;
+  color: #4a4a4a;
+}
+
+.modalContent input[type="text"] {
+  width: 100%;
+  height: 100px;
+  border-radius: 8px;
+  background-color: #f7f7f7;
+  border: solid 0.8px #c6c6c6;
+  padding: 7px 10px;
+  outline: 0;
+  color: #4a4a4a;
+  text-align: center;
+  font-family: "OpenSans-Medium";
+  font-size: 16px;
+}
+
+.modalContent input[type="email"] {
+  height: 60px;
+  background: #f7f7f7;
+  border: 1px solid #c6c6c6;
+  padding: 12px 10px;
+  font-family: "OpenSans-Medium";
+  font-size: 14px;
+  border-radius: 7px;
+  outline: 0;
+  color: #4a4a4a;
+}
+
+.modalContent button {
+  border: 1px solid #ff9800;
+  background: #ff9800;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 13px;
+  font-size: 13px;
+  width: 100%;
+  border-radius: 100px;
 }
 
 .closeModal {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    padding: 5px 7px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 5px 7px;
+  font-size: 20px;
+  color: #bbb;
 }
