--- a/src/pages/Contact/styles.module.css
+++ b/src/pages/Contact/styles.module.css
@@ -24,7 +24,7 @@
 }
 .contactBottomContainer {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("../../assets//images/Banner.jpeg");
+    url("../../assets//images/BackgroundImageContainer\ \(2\).png");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
