--- a/src/pages/More/styles.module.css
+++ b/src/pages/More/styles.module.css
@@ -4,7 +4,7 @@
 
 .moreBottomContainer {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("../../assets//images/Banner.jpeg");
+    url("../../assets//images/BackgroundImageContainer\ \(2\).png");
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
